simple api call and display

--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 
     <div class="wrapper">
         <h1>Tic Tac Toe</h1>
+        <div class="score">
+        <p id="player1">Player 1 Score: </p>
+        <p id="player2">Player 2 Score: </p>
+        </div>
             <div class="gameboard">
             
             </div>
+        <div class="myButtons">
         <button class="reset">Reset</button>
+        <button class="replay">New Game</button>
+    </div>
     </div>
 
 
