--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 <body>
 
     <div class="wrapper">
+        
         <h1>Tic Tac Toe</h1>
+        <p class="clock"></p>
         <div class="score">
-        <p id="player1">Player 1 Score: </p>
-        <p id="player2">Player 2 Score: </p>
+        <p id="player1">Player 1 Score: 0</p>
+        <p id="player2">Player 2 Score: 0</p>
         </div>
             <div class="gameboard">
             
